// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDownGroup Arrow key down should open the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="dropdown__icon--hide sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Arrow key up should open the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="dropdown__icon--hide sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Click outside should close the dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Click outside should not close the dropdown when the isOpen prop equals true 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      >
        Option One
      </div>
      <svg
        class="dropdown__icon--hide sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked dropdown--overflow sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="dropdown__selected sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Escape key should close the drop down 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should not focus onClick 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="dropdown--disabled sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="-1"
  >
    <label
      class="dropdown--large dropdown--border dropdown__label--disabled sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="dropdown__text--disabled sc-EHOje exIaPu"
      />
      <svg
        class="dropdown__chevron--disabled sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should open the drop down onClick 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Should remove event listener when unmount 1`] = `""`;

exports[`DropDownGroup Space bar should select and close dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      >
        Option One
      </div>
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="dropdown__selected sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup Space bar should select and not close dropdown when the isOpen prop equals true 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      >
        Option One
      </div>
      <svg
        class="dropdown__icon--hide sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked dropdown--overflow sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="dropdown__selected sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders bordered variant with an inner label with a placeholder prop 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Select_An_Option"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Select_An_Option"
      >
        Select An Option
      </span>
      <div
        class="sc-EHOje exIaPu"
      >
        Select An Option
      </div>
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders borderless variant with an inner label with a label prop 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Selected_Option:"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Selected_Option:"
      >
        Selected Option:
      </span>
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="dropdown--no-border sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders default dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders default dropdown that should always open downwards 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders input correctly when the isOpen prop with a value of true is passed 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--active dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="dropdown__icon--hide sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large dropdown--clicked dropdown--overflow sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders input correctly when the keywordSearch prop with a value of false is passed 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders input correctly when the withKeyboardProvider prop with a value of false is passed 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        aria-labelledby="hidden-label__"
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup renders small dropdown 1`] = `
<div
  data-testid="test-outSideComponent"
>
  <div
    data-testid="something"
  >
    something
  </div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__"
    class="sc-bxivhb pBoyv"
    data-testid="test-dropContainer"
    tabindex="0"
  >
    <label
      class="dropdown--small dropdown--border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__"
      />
      <div
        class="sc-EHOje exIaPu"
      />
      <svg
        class="sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--small sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionOne"
          role="option"
          tabindex="-1"
          value="ValueOne"
        >
          Option One
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionTwo"
          role="option"
          tabindex="-1"
          value="ValueTwo"
        >
          Second Option
        </span>
        <span
          class="sc-gzVnrw imflCT"
          data-testid="test-dropDownOptionThree"
          role="option"
          tabindex="-1"
          value="ValueThree"
        >
          Option Three
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should render the correct label when label prop is passed, and when an array of children containing falsy values is passed to each DropDownOption 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Sort_By:"
    class="sc-bxivhb pBoyv"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Sort_By:"
      >
        Sort By:
      </span>
      <div
        class="sc-EHOje exIaPu"
      >
        Sort By:
         
        Date
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="dropdown__selected sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="date"
        >
          Date
        </span>
        <span
          class="sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="distance"
        >
          Distance - 
          Closest
        </span>
        <span
          class="sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="price"
        >
          Price 
          <span>
            On sale
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should render the correct label when label prop is passed, and when an array of children containing string and node values is passed to each DropDownOption 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Sort_By:"
    class="sc-bxivhb pBoyv"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Sort_By:"
      >
        Sort By:
      </span>
      <div
        class="sc-EHOje exIaPu"
      >
        Sort By:
         
        Price 
        <span>
          On sale
        </span>
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="date"
        >
          Date
        </span>
        <span
          class="sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="distance"
        >
          Distance - 
          Closest
        </span>
        <span
          class="dropdown__selected sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="price"
        >
          Price 
          <span>
            On sale
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownGroup should render the correct label when label prop is passed, and when an array of children containing string values is passed to each DropDownOption 1`] = `
<div>
  <div
    aria-haspopup="listbox"
    aria-labelledby="hidden-label__Sort_By:"
    class="sc-bxivhb pBoyv"
    tabindex="0"
  >
    <label
      class="dropdown--large dropdown--no-border sc-bdVaJa qKpWB"
    >
      <span
        class="sc-htpNat irkcXP"
        id="hidden-label__Sort_By:"
      >
        Sort By:
      </span>
      <div
        class="sc-EHOje exIaPu"
      >
        Sort By:
         
        Distance - 
        Closest
      </div>
      <svg
        class="dropdown--no-border sc-ifAKCX cnmiOA"
        height="16"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 10.768l6.678-6.679a.774.774 0 1 1 1.095 1.095L8.547 12.41a.774.774 0 0 1-1.094 0L.227 5.184A.774.774 0 0 1 1.322 4.09L8 10.768z"
          fill="#262626"
          fill-opacity=".65"
          fill-rule="nonzero"
        />
      </svg>
    </label>
    <div
      class="dropdown__items dropdown__items--large sc-bwzfXH bOaDnd"
    >
      <div
        class="sc-bZQynM koCnbp"
        role="listbox"
      >
        <span
          class="sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="date"
        >
          Date
        </span>
        <span
          class="dropdown__selected sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="distance"
        >
          Distance - 
          Closest
        </span>
        <span
          class="sc-gzVnrw imflCT"
          role="option"
          tabindex="-1"
          value="price"
        >
          Price 
          <span>
            On sale
          </span>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`DropDownOption should render the correct markup when a className prop is passed 1`] = `
<span
  className="dropdown__item--expandable imflCT"
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseMove={[Function]}
  role="option"
  selected={Array []}
  tabIndex="-1"
  value="ValueOne"
>
  Option One
</span>
`;
